--- a/Utilities/MonoCross.Utilities.Web.nuspec
+++ b/Utilities/MonoCross.Utilities.Web.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>MonoCross.Utilities.Web</id>
-        <version>4.0.0.326</version>
+        <version>$version$</version>
         <authors>Zebra Technologies Corp.</authors>
         <owners>Zebra Technologies Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,5 @@
             <dependency id="MonoCross" version="4.0.0.326" />
         </dependencies>
     </metadata>
-    <files>
-        <file src="lib\_._" target="lib\_._" />
-    </files>
+    <files />
 </package>
