--- a/Utilities/MonoCross.Utilities.Droid.nuspec
+++ b/Utilities/MonoCross.Utilities.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>MonoCross.Utilities.Droid</id>
-        <version>4.0.0.326</version>
+        <version>$version$</version>
         <title>MonoCross.Utilities.Droid</title>
         <authors>Zebra Technologies</authors>
         <owners>Zebra Technologies Corp.</owners>
@@ -16,7 +16,5 @@
             <dependency id="MonoCross" version="4.0.0.326" />
         </dependencies>
     </metadata>
-    <files>
-        <file src="lib\_._" target="lib\_._" />
-    </files>
+    <files />
 </package>
