--- a/MonoCross.Compact.nuspec
+++ b/MonoCross.Compact.nuspec
@@ -1,17 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
-        <id>MonoCross.Compact</id>
-        <version>$version$</version>
-        <title>MonoCross for Compact Framework</title>
-        <authors>Zebra</authors>
-        <owners>Zebra Technologies Corp.</owners>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Compact Framework mobile development utilities</description>
-        <summary>Compact Framework MonoCross utilities functions</summary>
-        <releaseNotes>Open source release coordinated with iFactr 4.0</releaseNotes>
-        <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-        <tags>monocross ifactr</tags>
-    </metadata>
-    <files />
+<?xml version="1.0"?>
+<package>
+  <metadata>
+    <id>MonoCross.Compact</id>
+    <version>$version$</version>
+    <title>MonoCross for Compact Framework</title>
+    <authors>Zebra</authors>
+    <owners>Zebra Technologies Corp.</owners>
+    <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
+    <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Compact Framework mobile development utilities</description>
+    <summary>Compact Framework MonoCross utilities functions</summary>
+    <releaseNotes>Open source release coordinated with iFactr 4.0</releaseNotes>
+    <copyright>2010-2017 Zebra Technologies Corp.</copyright>
+    <tags>monocross ifactr</tags>
+  </metadata>
 </package>
