--- a/MonoCross.nuspec
+++ b/MonoCross.nuspec
@@ -1,20 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
-        <id>MonoCross</id>
-        <version>$version$</version>
-        <authors>Zebra Technologies Corp.</authors>
-        <owners>Zebra Technologies Corp.</owners>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>A cross-platform mobile framework using C# .NET and Mono to create shared-code apps on iOS, Android, Windows and Webkit.</description>
-        <summary>Cross-platform interfaces</summary>
-        <releaseNotes>4.0 Release for iFactr Open Source with MIT license.</releaseNotes>
-        <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-        <language />
-        <tags>monocross ifactr</tags>
-        <dependencies>
-            <dependency id="Newtonsoft.Json" version="10.0.3" />
-        </dependencies>
-    </metadata>
-    <files />
+<?xml version="1.0"?>
+<package>
+  <metadata>
+    <id>MonoCross</id>
+    <version>$version$</version>
+    <title>MonoCross Framework</title>
+    <authors>Zebra</authors>
+    <owners>Zebra Technologies Corp.</owners>
+    <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
+    <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>A cross-platform mobile framework using C# .NET and Mono to create shared-code apps on iOS, Android, Windows and Webkit.</description>
+    <summary>Cross-platform interfaces</summary>
+    <releaseNotes>4.0 Release for iFactr Open Source with MIT license.</releaseNotes>
+    <copyright>2010-2017 Zebra Technologies Corp.</copyright>
+    <tags>monocross ifactr</tags>
+    <dependencies>
+      <dependency id="Newtonsoft.Json" version="10.0.3" />
+    </dependencies>
+  </metadata>
 </package>
