--- a/Utilities/MonoCross.Utilities.NET.nuspec
+++ b/Utilities/MonoCross.Utilities.NET.nuspec
@@ -1,10 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
+﻿<?xml version="1.0"?>
+<package>
+  <metadata>
         <id>MonoCross.Utilities.NET</id>
         <version>$version$</version>
         <authors>Zebra Technologies Corp.</authors>
         <owners>Zebra Technologies Corp.</owners>
+    <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
+    <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>MonoCross.Utilities namespace with concrete implementations of utilities targeting .NET Framework v4.5.2 environment.  Concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serializer, Threading)</description>
         <summary>MonoCross.Utilities implementations for platforms running .NET 4.5, such as Windows.</summary>
@@ -14,5 +17,5 @@
         <dependencies>
             <dependency id="MonoCross" version="4.0.0.326" />
         </dependencies>
-    </metadata>
+  </metadata>
 </package>
