--- a/build.xml
+++ b/build.xml
@@ -27,38 +27,32 @@
 
     <Target Name="PreBuild" DependsOnTargets="Clean" >
         <Exec Condition=" '$(BuildRev)'==''" WorkingDirectory="$(Framework)" Command="git rev-list --count HEAD > buildrev.txt" />
-        <Exec WorkingDirectory="$(Framework)" Command="git rev-parse --abbrev-ref HEAD > branch.txt" />
-        <Exec WorkingDirectory="$(Framework)" Command="git rev-parse --short HEAD > commithash.txt" />
         <ReadLinesFromFile Condition=" '$(BuildRev)'==''" File="$(Framework)/buildrev.txt">
             <Output TaskParameter="Lines" PropertyName="BuildRev" />
         </ReadLinesFromFile>
-        <ReadLinesFromFile File="$(Framework)/branch.txt">
-            <Output TaskParameter="Lines" PropertyName="Branch" />
-        </ReadLinesFromFile>
-        <ReadLinesFromFile File="$(Framework)/commithash.txt">
-            <Output TaskParameter="Lines" PropertyName="CommitHash" />
-        </ReadLinesFromFile>
         <Delete Files="$(Framework)/buildrev.txt" />
-        <Delete Files="$(Framework)/branch.txt" />
-        <Delete Files="$(Framework)/commithash.txt" />
-        <Message Text="Repository Revision Num: $(BuildRev)" />
         <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
                 Regex="(\d+)\.(\d+)\.(\d+)\.(\d+)"
                 ReplacementText="$1.$2.$3.$(BuildRev)" />
-        <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
-                Regex="(AssemblyCopyright\(\D*)\s\d{4}\s(.*\))"
-                ReplacementText="$1 $([System.DateTime]::Now.ToString(`yyyy`)) $2" />
+
+        <Exec WorkingDirectory="$(Framework)" Command="git rev-parse --abbrev-ref HEAD > branch.txt" />
+        <ReadLinesFromFile File="$(Framework)/branch.txt">
+            <Output TaskParameter="Lines" PropertyName="Branch" />
+        </ReadLinesFromFile>
+        <Delete Files="$(Framework)/branch.txt" />
+
+        <Exec WorkingDirectory="$(Framework)" Command="git rev-parse --short HEAD > commithash.txt" />
+        <ReadLinesFromFile File="$(Framework)/commithash.txt">
+            <Output TaskParameter="Lines" PropertyName="CommitHash" />
+        </ReadLinesFromFile>
+        <Delete Files="$(Framework)/commithash.txt" />
         <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
                 Regex="(AssemblyInformationalVersion\(\D*-)\s\w*\s(\D*:)\D*(\)&quot;)"
                 ReplacementText="$1 $(Branch) $2 $(CommitHash)$3" />
-        <ReadLinesFromFile File="$(Framework)/Properties/AssemblyInfo.cs">
-            <Output TaskParameter="Lines" ItemName="ItemsFromFile"/>
-        </ReadLinesFromFile>
-        <PropertyGroup>
-            <Pattern>\[assembly: AssemblyVersion\(.(\d+)\.(\d+)\.(\d+)\.</Pattern>
-            <In>@(ItemsFromFile)</In>
-            <Version>$([System.Text.RegularExpressions.Regex]::Match($(In), $(Pattern)))</Version>
-        </PropertyGroup>
+
+        <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
+                Regex="(AssemblyCopyright\(\D*)\s\d{4}\s(.*\))"
+                ReplacementText="$1 $([System.DateTime]::Now.ToString(`yyyy`)) $2" />
     </Target>
 
     <Target Name="Compile" DependsOnTargets="PreBuild">
@@ -85,7 +79,31 @@
         <Error Text="$(Verify)" Condition="'$(Verify)' != ''" />
     </Target>
 
-	<Target Name="Package">
-        <Exec WorkingDirectory="$(Framework)" Command="nuget pack -Symbols -Version $(Version.Remove(0, 28))$(BuildRev) MonoCross$(Ext).csproj -Prop Configuration=Release" />
-	</Target>
+    <Target Name="UpdateDepVersions">
+      <XmlRead XPath="//dependency/@id" XmlFileName="$(Framework)/MonoCross$(Ext).nuspec">
+        <Output TaskParameter="Value" PropertyName="_Deps" />
+      </XmlRead>
+      <ItemGroup>
+        <_DepPaths Include="$(_Deps.Split(';'))"/>
+        <DepPaths Include="Distribution/%(_DepPaths.Identity).dll"/>
+      </ItemGroup>
+      <GetAssemblyIdentity AssemblyFiles="@(DepPaths)">
+            <Output TaskParameter="Assemblies" ItemName="Dependencies"/>
+      </GetAssemblyIdentity>
+      <XmlUpdate XPath="//dependency[@id=&quot;%(Dependencies.Name)&quot;]/@version"
+            XmlFileName="$(Framework)/MonoCross$(Ext).nuspec"
+            Value="%(Version)"/>
+    </Target>
+
+    <Target Name="Package" Condition="'$(Ext)' != '.Compact'" DependsOnTargets="UpdateDepVersions">
+      <ReadLinesFromFile File="$(Framework)/Properties/AssemblyInfo.cs">
+        <Output TaskParameter="Lines" ItemName="ItemsFromFile"/>
+      </ReadLinesFromFile>
+      <PropertyGroup>
+        <Pattern>\[assembly: AssemblyVersion\(.(\d+)\.(\d+)\.(\d+)\.</Pattern>
+        <In>@(ItemsFromFile)</In>
+        <Version>$([System.Text.RegularExpressions.Regex]::Match($(In), $(Pattern)))</Version>
+      </PropertyGroup>
+      <Exec WorkingDirectory="$(Framework)" Command="nuget pack -Symbols -Version $(Version.Remove(0, 28))$(BuildRev) MonoCross$(Ext).csproj -Prop Configuration=Release" />
+    </Target>
 </Project>
