--- a/Utilities/MonoCross.Utilities.iOS.nuspec
+++ b/Utilities/MonoCross.Utilities.iOS.nuspec
@@ -1,20 +1,20 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
-    <metadata>
-        <id>MonoCross.Utilities.iOS</id>
-        <version>$version$</version>
-        <authors>Zebra Technologies Corp.</authors>
-        <owners>Zebra Technologies Corp.</owners>
+  <metadata>
+    <id>MonoCross.Utilities.iOS</id>
+    <version>$version$</version>
+    <authors>Zebra Technologies Corp.</authors>
+    <owners>Zebra Technologies Corp.</owners>
     <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
     <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Specific to Apple's iOS environment, this package contains concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serialization, Threading)</description>
-        <summary>MonoCross.Utilities implementations for iOS</summary>
-        <releaseNotes>Version 4, released in conjunction with iFactr v4, opening iFactr utilities to the Open Source Community</releaseNotes>
-        <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-        <dependencies>
-            <dependency id="MonoCross" version="4.0.0.326" />
-        </dependencies>
-    </metadata>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Specific to Apple's iOS environment, this package contains concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serialization, Threading)</description>
+    <summary>MonoCross.Utilities implementations for iOS</summary>
+    <releaseNotes>Version 4, released in conjunction with iFactr v4, opening iFactr utilities to the Open Source Community</releaseNotes>
+    <copyright>2010-2017 Zebra Technologies Corp.</copyright>
+    <dependencies>
+      <dependency id="MonoCross" version="4.0.0.42" />
+    </dependencies>
+  </metadata>
 </package>
