--- a/Utilities/MonoCross.Utilities.NET.Debug.csproj
+++ b/Utilities/MonoCross.Utilities.NET.Debug.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MonoCross.Utilities</RootNamespace>
-    <AssemblyName>MonoCross.Utilities.Net</AssemblyName>
+    <AssemblyName>MonoCross.Utilities.NET</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
