--- a/MonoCross.nuspec
+++ b/MonoCross.nuspec
@@ -11,10 +11,10 @@
     <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A cross-platform mobile framework using C# .NET and Mono to create shared-code apps on iOS, Android, Windows and Webkit.</description>
-    <summary>Cross-platform interfaces</summary>
+    <summary>Cross-platform interfaces and implementations</summary>
     <releaseNotes>4.0 Release for iFactr Open Source with MIT license.</releaseNotes>
     <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-    <tags>monocross ifactr</tags>
+    <tags>MonoCross iFactr</tags>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="10.0.3" />
     </dependencies>
