--- a/Utilities/MonoCross.Utilities.Droid.nuspec
+++ b/Utilities/MonoCross.Utilities.Droid.nuspec
@@ -4,17 +4,17 @@
     <id>MonoCross.Utilities.Droid</id>
     <version>$version$</version>
     <title>MonoCross.Utilities.Droid</title>
-    <authors>Zebra Technologies</authors>
+    <authors>Zebra</authors>
     <owners>Zebra Technologies Corp.</owners>
     <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
     <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Android platform utilities.</description>
-    <summary>Android-specific utilities for use cross-platform mobile development.</summary>
+    <description>Specific to the Android environment, this package contains concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serialization, Threading)</description>
+    <summary>MonoCross.Utilities implementation for Android</summary>
     <releaseNotes>Open-source release coordinated with iFactr 4.0</releaseNotes>
     <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-    <tags>monocross ifactr</tags>
+    <tags>MonoCross iFactr Android</tags>
     <dependencies>
       <dependency id="MonoCross" version="4.0.0.42" />
     </dependencies>
