--- a/Utilities/MonoCross.Utilities.NET.nuspec
+++ b/Utilities/MonoCross.Utilities.NET.nuspec
@@ -3,17 +3,18 @@
   <metadata>
     <id>MonoCross.Utilities.NET</id>
     <version>$version$</version>
-    <authors>Zebra Technologies Corp.</authors>
+    <title>MonoCross.Utilities.NET</title>
+    <authors>Zebra</authors>
     <owners>Zebra Technologies Corp.</owners>
     <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
     <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>MonoCross.Utilities namespace with concrete implementations of utilities targeting .NET Framework v4.5.2 environment.  Concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serializer, Threading)</description>
-    <summary>MonoCross.Utilities implementations for platforms running .NET 4.5, such as Windows.</summary>
-    <releaseNotes>Version 4, released in conjunction with iFactr v4, opening iFactr utilities to the Open Source Community</releaseNotes>
+    <description>Specific to the Windows .NET environment, this package contains concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serialization, Threading)</description>
+    <summary>MonoCross.Utilities implementation for .NET</summary>
+    <releaseNotes>Open-source release coordinated with iFactr 4.0</releaseNotes>
     <copyright>2010-2017 Zebra Technologies Corp.</copyright>
-    <tags>monocross iFactr</tags>
+    <tags>MonoCross iFactr dotNET</tags>
     <dependencies>
       <dependency id="MonoCross" version="4.0.0.42" />
     </dependencies>
