--- a/Utilities/MonoCross.Utilities.iOS.nuspec
+++ b/Utilities/MonoCross.Utilities.iOS.nuspec
@@ -3,16 +3,18 @@
   <metadata>
     <id>MonoCross.Utilities.iOS</id>
     <version>$version$</version>
-    <authors>Zebra Technologies Corp.</authors>
+    <title>MonoCross.Utilities.iOS</title>
+    <authors>Zebra</authors>
     <owners>Zebra Technologies Corp.</owners>
     <licenseUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/MonoCross/MonoCross</projectUrl>
     <!--<iconUrl>https://raw.githubusercontent.com/MonoCross/MonoCross/master/monocross.png</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Specific to Apple's iOS environment, this package contains concrete, platform-specific implementations of the MonoCross Utilities (Encryption, Logging, Network, Serialization, Threading)</description>
-    <summary>MonoCross.Utilities implementations for iOS</summary>
-    <releaseNotes>Version 4, released in conjunction with iFactr v4, opening iFactr utilities to the Open Source Community</releaseNotes>
+    <summary>MonoCross.Utilities implementation for iOS</summary>
+    <releaseNotes>Open-source release coordinated with iFactr 4.0</releaseNotes>
     <copyright>2010-2017 Zebra Technologies Corp.</copyright>
+    <tags>MonoCross iFactr iOS</tags>
     <dependencies>
       <dependency id="MonoCross" version="4.0.0.42" />
     </dependencies>
