--- a/Utilities/MonoCross.Utilities.Android.csproj
+++ b/Utilities/MonoCross.Utilities.Android.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MonoCross.Utilities</RootNamespace>
-    <AssemblyName>MonoCross.Utilities.Droid</AssemblyName>
+    <AssemblyName>MonoCross.Utilities.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
