--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -80,8 +80,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\CompactDevice.cs" />
     <Compile Include="Utilities\Device.cs" />
+    <Compile Include="Utilities\EncryptionMode.cs" />
     <Compile Include="Utilities\Encryption\BaseEncryption.cs" />
     <Compile Include="Utilities\Encryption\EncryptionMode.cs" />
+    <Compile Include="Utilities\Encryption\EncryptorMap.cs" />
     <Compile Include="Utilities\Encryption\IEncryption.cs" />
     <Compile Include="Utilities\Encryption\MockEncryption.cs" />
     <Compile Include="Utilities\Events.cs" />
@@ -105,16 +107,20 @@
     <Compile Include="Utilities\Logging\ILog.cs" />
     <Compile Include="Utilities\Logging\LogEvent.cs" />
     <Compile Include="Utilities\Logging\LogEventArgs.cs" />
+    <Compile Include="Utilities\Logging\LoggerFactory.cs" />
     <Compile Include="Utilities\Logging\LogHelper.cs" />
     <Compile Include="Utilities\Logging\LogMessageType.cs" />
     <Compile Include="Utilities\Logging\LoggingLevel.cs" />
+    <Compile Include="Utilities\Logging\NetworkStatus.cs" />
     <Compile Include="Utilities\Logging\QuietLogger.cs" />
+    <Compile Include="Utilities\Logging\RestfulQueue.cs" />
     <Compile Include="Utilities\MobilePlatform.cs" />
     <Compile Include="Utilities\Network\Fetch\FetcherAsynch.cs" />
     <Compile Include="Utilities\Network\Fetch\FetcherSynch.cs" />
     <Compile Include="Utilities\Network\Fetch\IFetcher.cs" />
     <Compile Include="Utilities\Network\INetwork.cs" />
     <Compile Include="Utilities\Network\NetworkAsynch.cs" />
+    <Compile Include="Utilities\Network\NetworkFactory.cs" />
     <Compile Include="Utilities\Network\NetworkGetMethod.cs" />
     <Compile Include="Utilities\Network\NetworkPostMethod.cs" />
     <Compile Include="Utilities\Network\NetworkResponse.cs" />
@@ -124,18 +130,23 @@
     <Compile Include="Utilities\Network\Post\PosterAsynch.cs" />
     <Compile Include="Utilities\Network\Post\PosterSynch.cs" />
     <Compile Include="Utilities\PlatformUtils.cs" />
-    <Compile Include="Utilities\Reflection\CompactReflector.cs" />
+    <Compile Include="Utilities\Reflection\BasicReflector.cs" />
     <Compile Include="Utilities\Reflection\IReflector.cs" />
     <Compile Include="Utilities\Reflection\NullReflector.cs" />
     <Compile Include="Utilities\Resources\BasicResources.cs" />
     <Compile Include="Utilities\Resources\IResources.cs" />
     <Compile Include="Utilities\Resources\NullResources.cs" />
     <Compile Include="Utilities\Resources\WindowsResources.cs" />
+    <Compile Include="Utilities\Scanning\BarcodeScanner.cs" />
+    <Compile Include="Utilities\Scanning\BarcodeScannerFactory.cs" />
+    <Compile Include="Utilities\Scanning\IBarcodeScanner.cs" />
     <Compile Include="Utilities\Scanning\IScanner.cs" />
     <Compile Include="Utilities\Scanning\MockScanner.cs" />
     <Compile Include="Utilities\Scanning\Scanner.cs" />
+    <Compile Include="Utilities\Scanning\Symbology.cs" />
     <Compile Include="Utilities\Serialization\BaseSerializer.cs" />
     <Compile Include="Utilities\Serialization\ISerializer.cs" />
+    <Compile Include="Utilities\Serialization\SerializableDictionary.cs" />
     <Compile Include="Utilities\Serialization\SerializationFormat.cs" />
     <Compile Include="Utilities\Serialization\SerializerFactory.cs" />
     <Compile Include="Utilities\Serialization\SerializerJson.cs" />
@@ -143,9 +154,7 @@
     <Compile Include="Utilities\Serialization\SerializerXml.cs" />
     <Compile Include="Utilities\Storage\BaseFile.cs" />
     <Compile Include="Utilities\Storage\BasicFile.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\Directory.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\File.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\Path.cs" />
+    <Compile Include="Utilities\Storage\FileFactory.cs" />
     <Compile Include="Utilities\Storage\FileHelper.cs" />
     <Compile Include="Utilities\Storage\IFile.cs" />
     <Compile Include="Utilities\Storage\NullFile.cs" />
@@ -156,6 +165,7 @@
     <Compile Include="Utilities\Threading\IdleThreadQueue.cs" />
     <Compile Include="Utilities\Threading\MockThread.cs" />
     <Compile Include="Utilities\Threading\NullThread.cs" />
+    <Compile Include="Utilities\Threading\ThreadFactory.cs" />
     <Compile Include="Utilities\TypeSwitch.cs" />
     <Compile Include="Utilities\WeakKeyDictionary.cs" />
     <Compile Include="Utilities\Xml.cs" />
