--- a/MonoCross.csproj
+++ b/MonoCross.csproj
@@ -1,134 +1,104 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4618CCFC-5895-4C44-AD25-8BF312A96B86}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MonoCross</RootNamespace>
-    <AssemblyName>MonoCross</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Company>Zebra Technologies Corp.</Company>
+    <Copyright>Copyright ©  2018</Copyright>
+    <AssemblyVersion>4.0.0.42</AssemblyVersion>
+    <FileVersion>4.0.0.42</FileVersion>
+    <Description>MonoCross Framework</Description>
+    <Version>4.0.0.42</Version>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\MonoCross.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\MonoCross.xml</DocumentationFile>
-  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Android\**" />
+    <Compile Remove="BestSellers Sample\**" />
+    <Compile Remove="Console\**" />
+    <Compile Remove="Distribution\**" />
+    <Compile Remove="Touch\**" />
+    <Compile Remove="Utilities\bin\**" />
+    <Compile Remove="Utilities\Notification\**" />
+    <Compile Remove="Utilities\obj\**" />
+    <Compile Remove="Utilities\Properties\**" />
+    <Compile Remove="Webkit\**" />
+    <Compile Remove="WPF\**" />
+    <EmbeddedResource Remove="Android\**" />
+    <EmbeddedResource Remove="BestSellers Sample\**" />
+    <EmbeddedResource Remove="Console\**" />
+    <EmbeddedResource Remove="Distribution\**" />
+    <EmbeddedResource Remove="Touch\**" />
+    <EmbeddedResource Remove="Utilities\bin\**" />
+    <EmbeddedResource Remove="Utilities\Notification\**" />
+    <EmbeddedResource Remove="Utilities\obj\**" />
+    <EmbeddedResource Remove="Utilities\Properties\**" />
+    <EmbeddedResource Remove="Webkit\**" />
+    <EmbeddedResource Remove="WPF\**" />
+    <None Remove="Android\**" />
+    <None Remove="BestSellers Sample\**" />
+    <None Remove="Console\**" />
+    <None Remove="Distribution\**" />
+    <None Remove="Touch\**" />
+    <None Remove="Utilities\bin\**" />
+    <None Remove="Utilities\Notification\**" />
+    <None Remove="Utilities\obj\**" />
+    <None Remove="Utilities\Properties\**" />
+    <None Remove="Webkit\**" />
+    <None Remove="WPF\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Properties\AssemblyInfo.cs" />
+    <Compile Remove="Utilities\AndroidDevice.cs" />
+    <Compile Remove="Utilities\CompactDevice.cs" />
+    <Compile Remove="Utilities\ConsoleDevice.cs" />
+    <Compile Remove="Utilities\ImageComposition\AndroidCompositor.cs" />
+    <Compile Remove="Utilities\ImageComposition\GdiPlusCompositor.cs" />
+    <Compile Remove="Utilities\ImageComposition\TouchCompositor.cs" />
+    <Compile Remove="Utilities\Logging\AndroidLogger.cs" />
+    <Compile Remove="Utilities\Logging\Reachability.cs" />
+    <Compile Remove="Utilities\Network\AndroidFetcher.cs" />
+    <Compile Remove="Utilities\Network\AndroidNetwork.cs" />
+    <Compile Remove="Utilities\Resources\AndroidResources.cs" />
+    <Compile Remove="Utilities\Scanning\BarcodeScannerFactory.cs" />
+    <Compile Remove="Utilities\Scanning\LineaPro.cs" />
+    <Compile Remove="Utilities\Scanning\RedLaser.cs" />
+    <Compile Remove="Utilities\Scanning\RedLaser.MD.cs" />
+    <Compile Remove="Utilities\Scanning\RedLaser.MT.cs" />
+    <Compile Remove="Utilities\Storage\AndroidFile.cs" />
+    <Compile Remove="Utilities\Threading\AndroidThread.cs" />
+    <Compile Remove="Utilities\Threading\CompactFrameworkThread.cs" />
+    <Compile Remove="Utilities\Threading\DispatcherThread.cs" />
+    <Compile Remove="Utilities\Threading\TouchThread.cs" />
+    <Compile Remove="Utilities\TouchDevice.cs" />
+    <Compile Remove="Utilities\WebDevice.cs" />
+    <Compile Remove="Utilities\WebSessionDictionary.cs" />
+    <Compile Remove="Utilities\WindowsDevice.cs" />
+    <Compile Remove="Utilities\WpfDevice.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove=".gitignore" />
+    <None Remove="build-CF.cmd" />
+    <None Remove="build.cmd" />
+    <None Remove="build.xml" />
+    <None Remove="MonoCross.nuspec" />
+    <None Remove="MonoCross.png" />
+    <None Remove="README.markdown" />
+    <None Remove="Utilities\MonoCross.Utilities.Android.nuspec" />
+    <None Remove="Utilities\MonoCross.Utilities.iOS.nuspec" />
+    <None Remove="Utilities\MonoCross.Utilities.NET.nuspec" />
+    <None Remove="Utilities\MonoCross.Utilities.Web.nuspec" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>Distribution\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\Ishmael\Distribution\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Navigation\MXApplication.cs" />
-    <Compile Include="Navigation\MXContainer.cs" />
-    <Compile Include="Navigation\MXController.cs" />
-    <Compile Include="Navigation\MXNavigation.cs" />
-    <Compile Include="Navigation\MXView.cs" />
-    <Compile Include="Navigation\MXViewMap.cs" />
-    <Compile Include="Navigation\NamedTypeMap.cs" />
-    <Compile Include="Navigation\SerializableDictionary.cs" />
-    <Compile Include="Navigation\Session.cs" />
-    <Compile Include="Navigation\TypeLoader.cs" />
-    <Compile Include="Navigation\ViewPerspective.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Device.cs" />
-    <Compile Include="Utilities\Encryption\EncryptionMode.cs" />
-    <Compile Include="Utilities\Encryption\IEncryption.cs" />
-    <Compile Include="Utilities\Encryption\MockEncryption.cs" />
-    <Compile Include="Utilities\Events.cs" />
-    <Compile Include="Utilities\Extensions\DictionaryExtensions.cs" />
-    <Compile Include="Utilities\Extensions\EnumExtensions.cs" />
-    <Compile Include="Utilities\Extensions\IEnumerableExtensions.cs" />
-    <Compile Include="Utilities\Extensions\StringExtensions.cs" />
-    <Compile Include="Utilities\HttpUtility.cs" />
-    <Compile Include="Utilities\ImageComposition\ICompositor.cs" />
-    <Compile Include="Utilities\ImageComposition\ImageUtility.cs" />
-    <Compile Include="Utilities\ImageComposition\NullCompositor.cs" />
-    <Compile Include="Utilities\Imaging\ImageCache.cs" />
-    <Compile Include="Utilities\Imaging\Interfaces\IExifData.cs" />
-    <Compile Include="Utilities\Imaging\Interfaces\IImageCache.cs" />
-    <Compile Include="Utilities\Imaging\Interfaces\IImageData.cs" />
-    <Compile Include="Utilities\Logging\DiagnosticDebugLogger.cs" />
-    <Compile Include="Utilities\Logging\ILog.cs" />
-    <Compile Include="Utilities\Logging\LogEvent.cs" />
-    <Compile Include="Utilities\Logging\LogEventArgs.cs" />
-    <Compile Include="Utilities\Logging\LogHelper.cs" />
-    <Compile Include="Utilities\Logging\LogMessageType.cs" />
-    <Compile Include="Utilities\Logging\LoggingLevel.cs" />
-    <Compile Include="Utilities\MobilePlatform.cs" />
-    <Compile Include="Utilities\Network\Fetch\FetcherAsynch.cs" />
-    <Compile Include="Utilities\Network\Fetch\FetcherSynch.cs" />
-    <Compile Include="Utilities\Network\Fetch\IFetcher.cs" />
-    <Compile Include="Utilities\Network\INetwork.cs" />
-    <Compile Include="Utilities\Network\NetworkAsynch.cs" />
-    <Compile Include="Utilities\Network\NetworkGetMethod.cs" />
-    <Compile Include="Utilities\Network\NetworkPostMethod.cs" />
-    <Compile Include="Utilities\Network\NetworkResponse.cs" />
-    <Compile Include="Utilities\Network\NetworkSynch.cs" />
-    <Compile Include="Utilities\Network\NetworkUtils.cs" />
-    <Compile Include="Utilities\Network\Post\IPoster.cs" />
-    <Compile Include="Utilities\Network\Post\PosterAsynch.cs" />
-    <Compile Include="Utilities\Network\Post\PosterSynch.cs" />
-    <Compile Include="Utilities\PlatformUtils.cs" />
-    <Compile Include="Utilities\Reflection\BasicReflector.cs" />
-    <Compile Include="Utilities\Reflection\IReflector.cs" />
-    <Compile Include="Utilities\Reflection\NullReflector.cs" />
-    <Compile Include="Utilities\Resources\BasicResources.cs" />
-    <Compile Include="Utilities\Resources\IResources.cs" />
-    <Compile Include="Utilities\Resources\NullResources.cs" />
-    <Compile Include="Utilities\Scanning\IScanner.cs" />
-    <Compile Include="Utilities\Scanning\MockScanner.cs" />
-    <Compile Include="Utilities\Scanning\Scanner.cs" />
-    <Compile Include="Utilities\Serialization\BaseSerializer.cs" />
-    <Compile Include="Utilities\Serialization\ISerializer.cs" />
-    <Compile Include="Utilities\Serialization\SerializationFormat.cs" />
-    <Compile Include="Utilities\Serialization\SerializerFactory.cs" />
-    <Compile Include="Utilities\Serialization\SerializerJson.cs" />
-    <Compile Include="Utilities\Serialization\SerializerOdata.cs" />
-    <Compile Include="Utilities\Serialization\SerializerXml.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\Directory.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\File.cs" />
-    <Compile Include="Utilities\Storage\Compatibility\Path.cs" />
-    <Compile Include="Utilities\Storage\IFile.cs" />
-    <Compile Include="Utilities\Storage\NullFile.cs" />
-    <Compile Include="Utilities\SyncQueue.cs" />
-    <Compile Include="Utilities\Threading\IThread.cs" />
-    <Compile Include="Utilities\Threading\IdleThreadQueue.cs" />
-    <Compile Include="Utilities\Threading\MockThread.cs" />
-    <Compile Include="Utilities\Threading\NullThread.cs" />
-    <Compile Include="Utilities\Threading\TaskThread.cs" />
-    <Compile Include="Utilities\Threading\Timer.cs" />
-    <Compile Include="Utilities\TypeSwitch.cs" />
-    <Compile Include="Utilities\WeakKeyDictionary.cs" />
-    <Compile Include="Utilities\Xml.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
