--- a/Utilities/MonoCross.Utilities.Android.Debug.csproj
+++ b/Utilities/MonoCross.Utilities.Android.Debug.csproj
@@ -13,8 +13,8 @@
     <AssemblyName>MonoCross.Utilities.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,7 +36,6 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Java.Interop" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
@@ -45,24 +44,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndroidDevice.cs" />
-    <Compile Include="Encryption\AesEncryption.cs" />
-    <Compile Include="Encryption\AndroidEncryption.cs" />
-    <Compile Include="Encryption\BaseEncryption.cs" />
-    <Compile Include="Encryption\EncryptorMap.cs" />
     <Compile Include="ImageComposition\AndroidCompositor.cs" />
     <Compile Include="Logging\AndroidLogger.cs" />
-    <Compile Include="Logging\BaseLogger.cs" />
+    <Compile Include="Notification\Notify.MD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reflection\AndroidReflector.cs" />
     <Compile Include="Resources\AndroidResources.cs" />
-    <Compile Include="Resources\WindowsResources.cs" />
+    <Compile Include="Scanning\BarcodeScannerFactory.cs" />
+    <Compile Include="Scanning\RedLaser.cs" />
+    <Compile Include="Scanning\RedLaser.MD.cs" />
     <Compile Include="Storage\AndroidFile.cs" />
-    <Compile Include="Storage\BaseFile.cs" />
     <Compile Include="Threading\AndroidThread.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoCross.csproj">
-      <Project>{4618ccfc-5895-4c44-ad25-8bf312a96b86}</Project>
+      <Project>{b6727c87-771f-44c1-8477-afc9c35e4eef}</Project>
       <Name>MonoCross</Name>
     </ProjectReference>
   </ItemGroup>
