--- a/Utilities/MonoCross.Utilities.Android.csproj
+++ b/Utilities/MonoCross.Utilities.Android.csproj
@@ -13,8 +13,8 @@
     <AssemblyName>MonoCross.Utilities.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,19 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndroidDevice.cs" />
-    <Compile Include="Encryption\AesEncryption.cs" />
-    <Compile Include="Encryption\AndroidEncryption.cs" />
-    <Compile Include="Encryption\BaseEncryption.cs" />
-    <Compile Include="Encryption\EncryptorMap.cs" />
     <Compile Include="ImageComposition\AndroidCompositor.cs" />
     <Compile Include="Logging\AndroidLogger.cs" />
-    <Compile Include="Logging\BaseLogger.cs" />
+    <Compile Include="Notification\Notify.MD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reflection\AndroidReflector.cs" />
     <Compile Include="Resources\AndroidResources.cs" />
-    <Compile Include="Resources\WindowsResources.cs" />
+    <Compile Include="Scanning\BarcodeScannerFactory.cs" />
+    <Compile Include="Scanning\RedLaser.cs" />
+    <Compile Include="Scanning\RedLaser.MD.cs" />
     <Compile Include="Storage\AndroidFile.cs" />
-    <Compile Include="Storage\BaseFile.cs" />
     <Compile Include="Threading\AndroidThread.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
