--- a/Utilities/MonoCross.Utilities.NET.Debug.csproj
+++ b/Utilities/MonoCross.Utilities.NET.Debug.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MonoCross.Utilities</RootNamespace>
     <AssemblyName>MonoCross.Utilities.NET</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -37,28 +37,22 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.XML" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleDevice.cs" />
+    <Compile Include="WebDevice.cs" />
+    <Compile Include="WebSessionDictionary.cs" />
     <Compile Include="WpfDevice.cs" />
-    <Compile Include="Encryption\AesEncryption.cs" />
-    <Compile Include="Encryption\BaseEncryption.cs" />
-    <Compile Include="Encryption\EncryptorMap.cs" />
-    <Compile Include="Storage\BaseFile.cs" />
-    <Compile Include="Storage\BasicFile.cs" />
     <Compile Include="ImageComposition\GdiPlusCompositor.cs" />
-    <Compile Include="Logging\BaseLogger.cs" />
-    <Compile Include="Logging\BasicLogger.cs" />
-    <Compile Include="Logging\QuietLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\WindowsResources.cs" />
     <Compile Include="Threading\DispatcherThread.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoCross.csproj">
-      <Project>{4618ccfc-5895-4c44-ad25-8bf312a96b86}</Project>
+      <Project>{b6727c87-771f-44c1-8477-afc9c35e4eef}</Project>
       <Name>MonoCross</Name>
     </ProjectReference>
   </ItemGroup>
