--- a/Utilities/MonoCross.Utilities.iOS.Debug.csproj
+++ b/Utilities/MonoCross.Utilities.iOS.Debug.csproj
@@ -7,7 +7,6 @@
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <RootNamespace>MonoCross.Utilities</RootNamespace>
-    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>MonoCross.Utilities.iOS</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -37,23 +36,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImageComposition\TouchCompositor.cs" />
-    <Compile Include="Logging\BasicLogger.cs" />
+    <Compile Include="Logging\Reachability.cs" />
+    <Compile Include="Notification\Notify.MT.cs" />
+    <Compile Include="Scanning\BarcodeScannerFactory.cs" />
+    <Compile Include="Scanning\RedLaser.cs" />
+    <Compile Include="Scanning\RedLaser.MT.cs" />
     <Compile Include="TouchDevice.cs" />
-    <Compile Include="Encryption\AesEncryption.cs" />
-    <Compile Include="Encryption\BaseEncryption.cs" />
-    <Compile Include="Encryption\EncryptorMap.cs" />
-    <Compile Include="Logging\BaseLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\WindowsResources.cs" />
-    <Compile Include="Storage\BasicFile.cs" />
-    <Compile Include="Storage\BaseFile.cs" />
     <Compile Include="Threading\TouchThread.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MonoCross.csproj">
-      <Project>{4618ccfc-5895-4c44-ad25-8bf312a96b86}</Project>
+      <Project>{b6727c87-771f-44c1-8477-afc9c35e4eef}</Project>
       <Name>MonoCross</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
