Add copy command to build files

--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -185,4 +185,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)$(TargetName).* $(ProjectDir)Distribution</PostBuildEvent>
+  </PropertyGroup>
 </Project>
