--- a/build.xml
+++ b/build.xml
@@ -25,9 +25,9 @@
             <Output TaskParameter="Lines" PropertyName="BuildRev" />
         </ReadLinesFromFile>
         <Delete Files="$(Framework)/buildrev.txt" />
-        <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
-                Regex="(\d+)\.(\d+)\.(\d+)\.(\d+)"
-                ReplacementText="$1.$2.$3.$(BuildRev)" />
+        <!-- <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs" -->
+                <!-- Regex="(\d+)\.(\d+)\.(\d+)\.(\d+)" -->
+                <!-- ReplacementText="$1.$2.$3.$(BuildRev)" /> -->
 
         <Exec WorkingDirectory="$(Framework)" Command="git rev-parse --abbrev-ref HEAD > branch.txt" />
         <ReadLinesFromFile File="$(Framework)/branch.txt">
@@ -40,18 +40,18 @@
             <Output TaskParameter="Lines" PropertyName="CommitHash" />
         </ReadLinesFromFile>
         <Delete Files="$(Framework)/commithash.txt" />
-        <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
-                Regex="(AssemblyInformationalVersion\(\D*-)\s\w*\s(\D*:)\D*(\)&quot;)"
-                ReplacementText="$1 $(Branch) $2 $(CommitHash)$3" />
+        <!-- <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs" -->
+                <!-- Regex="(AssemblyInformationalVersion\(\D*-)\s\w*\s(\D*:)\D*(\)&quot;)" -->
+                <!-- ReplacementText="$1 $(Branch) $2 $(CommitHash)$3" /> -->
 
-        <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs"
-                Regex="(AssemblyCopyright\(\D*)\s\d{4}\s(.*\))"
-                ReplacementText="$1 $([System.DateTime]::Now.ToString(`yyyy`)) $2" />
+        <!-- <FileUpdate Files="$(Framework)/Properties/AssemblyInfo.cs" -->
+                <!-- Regex="(AssemblyCopyright\(\D*)\s\d{4}\s(.*\))" -->
+                <!-- ReplacementText="$1 $([System.DateTime]::Now.ToString(`yyyy`)) $2" /> -->
     </Target>
 
     <Target Name="Compile" DependsOnTargets="PreBuild">
         <MSBuild Projects="$(Framework)/MonoCross$(Ext).csproj" />
-        <GitClient Command="checkout" Arguments="-- &quot;$(Framework)/Properties/AssemblyInfo.cs&quot;"/>
+        <Exec WorkingDirectory="$(Framework)" Command="git checkout -- &quot;$(Framework)/Properties/AssemblyInfo.cs&quot;" />
     </Target>
 
     <Target Name="CopyToRoot">
@@ -73,7 +73,7 @@
         <Error Text="$(Verify)" Condition="'$(Verify)' != ''" />
     </Target>
 
-    <Target Name="UpdateDepVersions">
+    <Target Name="Package">
       <XmlRead XPath="//dependency/@id" XmlFileName="$(Framework)/MonoCross$(Ext).nuspec">
         <Output TaskParameter="Value" PropertyName="_Deps" />
       </XmlRead>
@@ -84,16 +84,12 @@
         <_DepPaths Include="$(_Deps.Split(';'))"/>
         <DepPaths Include="Distribution/%(_DepPaths.Identity).dll"/>
       </ItemGroup>
-
       <GetFileVersion Files="@(DepPaths)" Formats="@(Formats)">
         <Output TaskParameter="Value" ItemName="Dependencies" />
       </GetFileVersion>
       <XmlUpdate XPath="//dependency[@id=&quot;%(Dependencies.Name)&quot;]/@version"
             XmlFileName="$(Framework)/MonoCross$(Ext).nuspec"
             Value="%(Version)"/>
-    </Target>
-
-    <Target Name="Package" DependsOnTargets="UpdateDepVersions">
       <ReadLinesFromFile File="$(Framework)/Properties/AssemblyInfo.cs">
         <Output TaskParameter="Lines" ItemName="ItemsFromFile"/>
       </ReadLinesFromFile>
