Add quotes for paths

--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -186,6 +186,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)$(TargetName).* $(ProjectDir)Distribution</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*" "$(ProjectDir)Distribution"</PostBuildEvent>
   </PropertyGroup>
 </Project>
